Closed Bug 756238 Opened 12 years ago Closed 12 years ago

IonMonkey: Assertion failure: JSOp(*(script->code + tn->start + tn->length)) == JSOP_ENDITER, at ion/IonFrames.cpp:348

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: dvander)

References

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update][fuzzblocker])

Attachments

(1 file)

The following testcase asserts on ionmonkey revision 14735b4dbccc (run with --ion -n -m --ion-eager):


outer:
  for (var elem in {x:1})
    if (p > "q")
      continue outer;
Whiteboard: [jsbugmon:update] → [jsbugmon:update][fuzzblocker]
Attached patch fixSplinter Review
Bogus assert - I missed this in the patch that fixed the other instance of script->code.
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #625035 - Flags: review?(nicolas.b.pierron)
Attachment #625035 - Flags: review?(nicolas.b.pierron) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/1322cb5d6684
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/ion/bug756238.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: