Fix bogus assert (bug 756238, r=pierron).